--- a/node_Examples/Exercise_1/package.json
+++ b/node_Examples/Exercise_1/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "node_examples",
+  "name": "node_example",
   "version": "1.0.0",
   "description": "learning node js",
-  "main": "Example1.js",
+  "main": "index1.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node Example1"
+    "start": "node index1"
   },
   "author": "RohanG",
   "license": "ISC"
