--- a/node_Examples/Exercise_2/node_http/package.json
+++ b/node_Examples/Exercise_2/node_http/package.json
@@ -2,10 +2,10 @@
   "name": "node-http",
   "version": "1.0.0",
   "description": "node http module example",
-  "main": "index.js",
+  "main": "index1.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1" ,
-    "start": "node index"
+    "start": "node index1"
   },
   "author": "rohan",
   "license": "ISC"
