--- a/node_Examples/node-express/package.json
+++ b/node_Examples/node-express/package.json
@@ -2,14 +2,15 @@
   "name": "nodeexpress",
   "version": "1.0.0",
   "description": "node express examples",
-  "main": "index.js",
+  "main": "index1.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index"
+    "start": "node index1"
   },
   "author": "rohan ghosh",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "morgan": "^1.9.1"
   }
 }
