--- a/node_Examples/node-express/package.json
+++ b/node_Examples/node-express/package.json
@@ -2,14 +2,15 @@
   "name": "nodeexpress",
   "version": "1.0.0",
   "description": "node express examples",
-  "main": "index1.js",
+  "main": "index2.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index1"
+    "start": "node index2"
   },
   "author": "rohan ghosh",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "morgan": "^1.9.1"
   }
